# allagan-websockets

./: .gitignore  Cargo.toml  LICENSE-APACHE.md  LICENSE-MIT.md  README.md
.github/workflows/: ci.yml
examples/: insecure_client.rs  secure_client.rs
src/: codec.rs  connection.rs  errors.rs  lib.rs
src/connection/: client.rs  server.rs
