[package]
name = "allagan-websocket"
version = "0.1.0"
edition = "2021"
authors = ["Underscore Nul <underscore.nul@proton.me>"]
license = "MIT OR Apache-2.0"
description = "A WebSocket protocol implementation in Rust."

[dependencies]
base64 = "0.22.1"
tokio-rustls = "0.26.0"
futures-util = { version = "0.3.31", features = ["compat", "sink"] }
rand = { version = "0.9.2", features = ["serde"] }
rustls = "0.23.31"
sha1 = "0.10.6"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = [
    "io-std",
    "io-util",
    "net",
    "macros",
    "tracing",
] }
tokio-util = { version = "0.7.16", features = ["codec", "tracing"] }
tracing = "0.1.41"
webpki-roots = "1.0.2"

[dev-dependencies]
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
