[package]
name = "allagan-websocket"
version = "0.1.0"
edition = "2021"
authors = ["Underscore Nul <underscore.nul@proton.me>"]
license = "MIT OR Apache-2.0"
description = "A WebSocket protocol implementation in Rust."
readme = "README.md"
repository = "https://github.com/allagan-bots/allagan-websocket"
keywords = ["websocket", "ws", "wss", "async"]
categories = [
    "network-programming",
    "asynchronous",
    "protocols",
    "web-programming",
]


[dependencies]
base64 = "0.22.1"
futures-util = { version = "0.3.31", features = ["compat", "sink"] }
http = "1.3.1"
http-serde = "2.0.0"
httparse = "1.8.0"
rand = { version = "0.9.2", features = ["serde"] }
rustls = "0.23.31"
serde = { version = "1.0", features = ["derive"] }
sha1 = "0.10.6"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = [
    "io-std",
    "io-util",
    "net",
    "macros",
    "tracing",
] }
tokio-rustls = "0.26.0"
tokio-util = { version = "0.7.16", features = ["codec", "tracing"] }
tracing = "0.1.41"
urlencoding = "2.1.3"
webpki-roots = "1.0.2"

[dev-dependencies]
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
